updated variables to match instructions

--- a/retrieve_movie_data.ipynb
+++ b/retrieve_movie_data.ipynb
@@ -123,7 +123,7 @@
     "    # create query with a page number\n",
     "    # API results show 10 articles at a time\n",
     "    # # Make a \"GET\" request and retrieve the JSON\n",
-    "    page_data = requests.get(page_url).json()\n",
+    "    reviews = requests.get(page_url).json()\n",
     "    \n",
     "    # Add a twelve second interval between queries to stay within API query limits\n",
     "    if page > 0:\n",
@@ -131,7 +131,7 @@
     "    \n",
     "    # Try and save the reviews to the reviews_list\n",
     "    try:\n",
-    "        docs = page_data['response']['docs']\n",
+    "        docs = reviews['response']['docs']\n",
     "        # loop through the reviews[\"response\"][\"docs\"] and append each review to the list\n",
     "        for doc in docs:\n",
     "            reviews_list.append(doc)\n",
